# hStereopsis

./: .gitignore  README.md  hStereopsis.cabal  profile.sh
data/TeaPotStereoData/: ReadMeTeaPot.txt  rect_info_1.mat  rect_info_2.mat  rect_info_3.mat  rect_info_4.mat  rect_info_5.mat
src/: Algorithm.hs  GlossRepa.hs  ImageFormat.hs  Main.hs
