name:           hStereopsis
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         svalaskevicius

executable hStereopsis
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   gloss,
                   repa-io,
                   repa,
                   repa-algorithms,
                   repa-devil,
                   gloss-raster,
                   bytestring,
                   mtl
  ghc-options:     -Wall -threaded
  other-modules:   GlossRepa

